name:                Basil
version:             0.0.1
synopsis:            ER modeling library
description:         This library is designed for building ER models.
license:             BSD3
license-file:        LICENSE
author:              Chris Eidhof
maintainer:          Chris Eidhof <chris@eidhof.nl>
homepage:            http://github.com/chriseidhof/basil
stability:           Unstable
category:            Data
build-type:          Simple
cabal-version:       >= 1.6
hs-source-dirs:      src
exposed-modules:     Basil
                     Basil.Core
                     Basil.Data.TBoolean
                     Basil.Data.TBoolean.TH
                     Basil.Data.TList
                     Basil.Data.TList.TH
                     Basil.Data.TList4
                     Basil.Database.Relational.Core
                     Basil.Database.Relational.Entities
                     Basil.Database.Relational.HDBC
                     Basil.Database.Relational.Interface
                     Basil.Database.Relational.Operations
                     Basil.Database.Relational.Relationships
                     Basil.Database.Relational.Schema
                     Basil.Database.Relational.Utils
                     Basil.Database.InMemory
                     Basil.Database.InMemory.Cache
                     Basil.Database.InMemory.Interface
                     Basil.Database.InMemory.Relations
                     Basil.Database.InMemory.Relations.Storage
                     Basil.Query
                     Basil.References
                     Basil.Relations
                     Basil.Relations.InitialValues
                     Basil.Relations.PList

build-depends:       base >= 3 && < 5,
                     containers >= 0.2,
                     fclabels >= 0.4.2,
                     Takusen >= 0.8.6,
                     regular,
                     monads-fd,
                     transformers,
                     HDBC,
                     HDBC-sqlite3,
                     template-haskell >= 2.4
